pandoc2rfc (0.8.2)

 * ...

 -- Miek Gieben <miek@miek.nl>  Sun, 01 Jan 2012 22:03:30 +0100


pandoc2rfc (0.8.1)

 * Assorted bugfixes.
 * Syntax coloring more in sync between Pandoc and AsciiDoc.
 * Added AUTHORS and CONTRIBUTORS file.

 -- Miek Gieben <miek@miek.nl>  Tue, 27 Dec 2011 20:32:01 +0100


pandoc2rfc (0.8)

 * Started a changelog.
 * Pandoc is supported as input language.
 * AsciiDoc is supported as input language.

 -- Miek Gieben <miek@miek.nl>  Sun, 25 Dec 2011 11:05:00 +0100